--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -24,19 +24,9 @@ stringData:
     ALERTMANAGER_PUSHOVER_TOKEN: ENC[AES256_GCM,data:QFytjqDSOXWL3/ZbTeeosNKr3nSIsl3l/nOJa+/B,iv:IPBs5Glre1CzfE+tTkT252qKeD+Htfaq9Uc8gU5ji1s=,tag:tRNQLawj6j5LNaep9TteaA==,type:str]
     RADARR_PUSHOVER_TOKEN: ENC[AES256_GCM,data:FSi7d9wA79qU/5yJciwg4OBK4/Ao9Lu8UwFbUBV3,iv:1H/Q7wldS8ZuA8VbDnC0y6Yb4LnAKXfQVU3AKUogM/4=,tag:kSvlvorY3U0h3VaGfI9cpg==,type:str]
     GRAFANA_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:USKIMaJ+Uy9oMVWkuOeKcdTKEHBTbgjl7rFthpWO8ndBp989bb61p9xvu+4azw9TpdjXC//tyzdbUTwX3FA0Vg==,iv:6PmB6GTKIzoIvGct5KBGR6ae56T0ExJAXU9ss0hKxYo=,tag:cPGjqaLz+59q5Y5IBKdIjg==,type:str]
-    LLDAP_JWT_SECRET: ENC[AES256_GCM,data:2iMzPjCcQ+iwwBHGotho1ENlZRoyEUbJqPN5tIMw1kE=,iv:eiRdn5YVHqzjD/+qjfI4DNHikQTS+OKlI/lMUURavD4=,tag:rwkPgLlWoqmEAuuRtcGd4g==,type:str]
-    LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:QPvx1VFWsU3aBw==,iv:V3l//8qRHZN/6hwZCmxza7Rc5zhAGxqJTRVatKdbBUs=,tag:sk8iDJNxZdttFCYEqyLMeQ==,type:str]
-    LLDAP_USER_DN: ENC[AES256_GCM,data:/22HjtE=,iv:QZgNS7hqHK8cqUuXcZ9KJRQpe5hqvrymYd6g5GFqDUU=,tag:sWuvH66A/7KLGs39vpKtTQ==,type:str]
-    LLDAP_LDAP_USER_EMAIL: ENC[AES256_GCM,data:CarfS0o6oKOelCExapbPdAw=,iv:T9h27I/zsztSnndy/+q7iJleZJOQB1HdEmboB1iEMlY=,tag:7Ld/x0rvbybuOaLdTUlC2A==,type:str]
-    LLDAP_SERVER_KEY_SEED: ENC[AES256_GCM,data:3Yx5YIgAJPVbMwajKX8HtiBp6kqNqAGa/awDUd/XZjLgbeS0J7s7rbHMNRLGcI/OkcMStj2P+Q==,iv:NDSgB7Sn2gXUU2zxZSCp5VIBcygrIOU+IvqzQUMdDss=,tag:AVAoAFGxx+EtNH5pvE3Icw==,type:str]
-    LLDAP_POSTGRES_USER: ENC[AES256_GCM,data:Hyu4wORqGw==,iv:4cu4NWXCzl4UyKPKdR3Pt6U4bsePlkxzBiVMjqrQ160=,tag:0/MYJ5UQTSB+H6rAuMspmg==,type:str]
-    LLDAP_POSTGRES_PASS: ENC[AES256_GCM,data:Gn8xOWRqpTBZHjBKbXKc9xqLjsRSMh1Sbkw2GKG+OMun/RDZbP6KuRfpAQNZh+pdopNnubURO2pSHgmzds9g6g==,iv:GjzzJugpqoX6kOISnJMVchEef5A+phBZKQNTV0DLRhc=,tag:HnzfTXwr46k7IpcqbRr6uQ==,type:str]
-    AUTHELIA_IDENTITY_PROVIDERS_OIDC_HMAC_SECRET: ENC[AES256_GCM,data:f+i64bT+m5IAHyjybVoWOJKlLko9i0O92aspk4fUGEb8Jifu/wyDdq/baPgNOidRq/Vf9C3KTMe0Se87yNTzoQ==,iv:BmDZ/WpodHt2SzsEYV1S21RaXht+scHdUg0e/ECEy+M=,tag:IjwUH+RPu5zzDKMnB6P7eA==,type:str]
-    AUTHELIA_JWT_SECRET: ENC[AES256_GCM,data:VBZ/x734eeW0jAOcWWpOF+zPIIhCOihGvlvgfx2NNBi5snSQcihq/zjbZD6nsR0T9H9A1d99sJfLdO6ER7PNpQ==,iv:ES5AR5dtuNZcpbUgUC8VG4TENogsVIzZT2suQej9sQo=,tag:ef3CgSwj2bbjw0IsuJgT7g==,type:str]
-    AUTHELIA_SESSION_SECRET: ENC[AES256_GCM,data:kWldlF2rjFwfOcrgKwwGUeNSSQZBZp5WsQMwpg6QyuHz6Fh6/GG+d+oGjIZZ+PvEYH9PoUiVGqaacGzQJCwx8A==,iv:o8jbVDnJFucuxOx8AO4junDwvF3n0wD31VL0zAndqfI=,tag:825zCzmY4pW6RGN7gGSrRw==,type:str]
-    AUTHELIA_STORAGE_ENCRYPTION_KEY: ENC[AES256_GCM,data:sT+t9k4j+YsNPEbQniU+OsPXsvxhXiz0KSW9hQqiJB/tsU/LX8iplTnXv/6Jj7/4SNw4mfB2fxBc7lso8nQ/EA==,iv:8yRf2wyDZDS/ucio7wF5ADCIu+niyFbXgAIzr5mHKhc=,tag:cHAoQo/s+1tvQds9Uovp0Q==,type:str]
-    AUTHELIA_STORAGE_POSTGRES_USERNAME: ENC[AES256_GCM,data:KUO7I0ixpRfRUw==,iv:2RgBylp10h8MhqWi71wBV7cFoYafCzNkDP7pxHHWZ/4=,tag:9+OvNb4Vu71BUtG2xLWxog==,type:str]
-    AUTHELIA_STORAGE_POSTGRES_PASSWORD: ENC[AES256_GCM,data:I+mxAa+mp3dF+s73NYsC+SMLx4AS/6buWSDAsz+EK108ZpOEkyic40fzQdcXQVrJR5UdvD+D4a9YVbWqOLqjCg==,iv:+nH2ps8jsbiTjnUx2jUMOiLgmEzshpl372+VtnURtDg=,tag:x2qifC0qRGrLYDrkvIeSTQ==,type:str]
+    SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:W/d9yay+/VEsfScc8sK41M2Keu2uy3z1H+mzaV3wlmrg2JsQASvT57nsnPZZdFR+R6QBT3PuiZSqCkfBY3zMOA==,iv:pWl78ryaLvfFI4TQs8j8dT38SPTz1Y9z8TKPV1OHdoQ=,tag:F4LTnXBGLmIe20ipAAM9qA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:j2TnB2FYotpckms=,iv:tvKe92x6BsXAJJXopAb0jihmjBhQb0Yk+IM9ZAcn22g=,tag:PPzvH189Da8r9Wn9Ki7imQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:29slhtTjQWM9vrnZYkJ2gl8U+PzCGVfRBZixw4g0tdCyrgxPaECBPpDGZCpCP1A91535AAuUHg5lQK/tGYlnww==,iv:hPXeFjdgzgqAkRaVnLl4W7wxDK5j+FAPaHl1wpF6aXw=,tag:U1tLNNYdolTbOOkKnS7Qbw==,type:str]
     SMTP_RELAY_HOSTNAME: ENC[AES256_GCM,data:3r7i1I/upWPRGEL6X71NFA==,iv:aBRaudVZk6PDqvJJ8V+vM436eht9si5alapnAZqbwN8=,tag:uUzr+3r4TaNaZGIPnw/Y+w==,type:str]
     SMTP_RELAY_SERVER: ENC[AES256_GCM,data:TtFgZOUv89NWxhNnouRWo5JmD/9i,iv:LW89G46d05hkgnmkAlAoSM2P8wxfkiF5qLFy3lWJSaE=,tag:Ut3NbMPEuTRVUqIm6xUZFQ==,type:str]
     SMTP_RELAY_USERNAME: ENC[AES256_GCM,data:kTXqeTxutGiRgvLytQpX33VBNZA=,iv:N4d7fuDX82o7RsxNQib6Yq3xTTAGfTsf1WKMwJ879Nw=,tag:P6/kXazoYmC2SjJD0qredA==,type:str]
@@ -60,8 +50,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-03-04T20:36:38Z"
-    mac: ENC[AES256_GCM,data:ghaEYD8k7ShjLbjfcqY+vdyyuUrBtNpqVKBo/Y6LGw7ERM52/3CRWWkxKr+N8T90wjgAJL348T9IbANk2beEMm1rPgWICSqpJowkt7XZNOcwB+aWWQFO/Fz2FgOlwgysk5DBo56QTA36O7S7oRQXczaKF9OL+bfiPiuC0PJIuIU=,iv:0puwgThFLFLaFvqM6HbLaWXEkQZqnvLYG2GB2hJMi5k=,tag:f6SfY1+I1MptaTv8WnIQrQ==,type:str]
+    lastmodified: "2024-03-10T22:24:30Z"
+    mac: ENC[AES256_GCM,data:PYmMHenEE3aXBWEAFgAYXZ2CZPfxspK8Ow7XYO9Nje6sxMhbDFXL8dGDvZNlw9S9TA7/evrS19CRIJBkuZM4I+c2PVCQa4blOQGheQw/NOFiRad2qhmFD/H4bYzD8wg/Q6ealXVhnnLosgQkiZYammG2NMf1D+OArbf3TSV2few=,iv:tzARSDfQ3tHhGc6Wl9px0v8PHwbqhvh3Ukt3xhSlCyY=,tag:+ytLOcA5pXOaAFXJYBYoaw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
