Fix nginx controller

--- a/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
@@ -29,6 +29,7 @@ spec:
     fullnameOverride: ingress-nginx-external
     controller:
       replicaCount: 1
+      allowSnippetAnnotations: true
       service:
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
