--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -27,6 +27,7 @@ spec:
     fullnameOverride: ingress-nginx-internal
     controller:
       replicaCount: 1
+      allowSnippetAnnotations: true
       service:
         annotations:
           io.cilium/lb-ipam-ips: "192.168.108.200"
