--- a/kubernetes/apps/security/authentik/app/kustomization.yaml
+++ b/kubernetes/apps/security/authentik/app/kustomization.yaml
@@ -7,3 +7,13 @@ resources:
   - ./secret.sops.yaml
   - ./ingress-outpost.yaml
   - ../../../../templates/gatus/external
+configMapGenerator:
+  - name: authentik-blueprints
+    files:
+      - flow-authentication.yaml=./blueprints/flow-authentication.yaml
+      - flow-authentication-ldap.yaml=./blueprints/flow-authentication-ldap.yaml
+      - flow-invalidation.yaml=./blueprints/flow-invalidation.yaml
+      - flow-topt-setup.yaml=./blueprints/flow-topt-setup.yaml
+      - flow-webauthn-setup.yaml=./blueprints/flow-webauthn-setup.yaml
+generatorOptions:
+  disableNameSuffixHash: true
