--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -5,6 +5,7 @@ metadata:
     namespace: flux-system
 stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:BPDFeKsSLw2Dz/E=,iv:9ojwCCR1irLZkGgZZl9SOMbDtkLX+Hw66SJP5PVoxts=,tag:x2KoAqG4yNNo7uyE0COvCA==,type:str]
+    INTERNAL_SERVICE_DOMAIN: ENC[AES256_GCM,data:gsDCzJ+evBfiWkn0f6y6v84=,iv:uRiHn+Ux3Ky0/jb8tCjoDvghjAuI890qTpMN1gEqxvs=,tag:BtjVjq9ji93zy9/Z1oTl9A==,type:str]
     SECRET_ACME_EMAIL: ENC[AES256_GCM,data:318ebuxf2OqEVMiVaXVMWBQ=,iv:Mb/UodbJsEReSiyvMXERvM+HPMxPvNorU188UFdNw0k=,tag:NU/xt/ZbnrONcb1W714Q2w==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:zzNCv/LjOw7sQTQHbr2LP1TwtLyIXpHwtco+HDDEj6b7elT/,iv:aN2HVpjkgYp0/Xy6dL1Qv7H+udFCkF5Tn84GC8slCSo=,tag:8SfObCci4a+1N5aRwjWVMA==,type:str]
     WW_ADMIN_PASSWORD: ENC[AES256_GCM,data:pRg0zri1OZ+VZV1humTa6UHHsoYXk7ZzM82lIDvq7JfQcyEg+eHnIlFwSTTDtlVWcOv/ZZDaxYLoHyYG,iv:rIPiy1ZsAs55lBYfkIoMGTjTztPKHKq0Euw7b05l68w=,tag:ucwDP4s0/pnxSIQ5jvPUZw==,type:str]
@@ -50,8 +51,8 @@ sops:
             QmxYU2FYZ0N2Z29lMTdhZnQyNU9jSUEKyG1YlQGZAqOI2namyYVUzFoW+7O9s5CL
             x/cy3nNdaILNiZtBPL9Zq6qvJSvQ0l+DCiGwEjBosA35m27eVooacw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-03-10T22:24:30Z"
-    mac: ENC[AES256_GCM,data:PYmMHenEE3aXBWEAFgAYXZ2CZPfxspK8Ow7XYO9Nje6sxMhbDFXL8dGDvZNlw9S9TA7/evrS19CRIJBkuZM4I+c2PVCQa4blOQGheQw/NOFiRad2qhmFD/H4bYzD8wg/Q6ealXVhnnLosgQkiZYammG2NMf1D+OArbf3TSV2few=,iv:tzARSDfQ3tHhGc6Wl9px0v8PHwbqhvh3Ukt3xhSlCyY=,tag:+ytLOcA5pXOaAFXJYBYoaw==,type:str]
+    lastmodified: "2024-03-11T21:58:58Z"
+    mac: ENC[AES256_GCM,data:7FDY6xMTGfhOzoSBTNxYtA1Wpr8wrpg9REBkM50TgwM6tNcGIo40m7aNnhB0p5pQUY7aBof+rKuXoqHxJOe987XuL6x7kb30luZ/J3/j8mEbFElEiQ5x+IU+Eu5QcZAqPUahtEEcxzwA/XXaerNaL6I/P+oTlm3ODMbKhzBa7Ow=,iv:Tv5KAGCggBbamKij9NyetJeSeCwOBU85OU9VOiPRoRg=,tag:qKsVaur6QCYKsXBDPSOB1w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
