--- a/kubernetes/apps/observability/victoria-metrics/ks.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/ks.yaml
@@ -27,6 +27,8 @@ metadata:
     substitution.flux.home.arpa/enabled: "true"
 spec:
   targetNamespace: observability
+  dependsOn:
+    - name: victoriametrics-crd
   path: "./kubernetes/apps/observability/victoria-metrics/app/"
   prune: true
   wait: false
