--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
            kind: VMAgent
            metadata:
              name: victoria-metrics-k8s-stack
-             namespace: monitoring
+             namespace: observability
            spec:
              externalLabels:
                $patch: delete
