--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -121,7 +121,7 @@ spec:
         notifiers:
           - selector:
               namespaceSelector:
-                matchNames: ["monitoring"]
+                matchNames: ["observability"]
               labelSelector:
                 matchLabels:
                   app.kubernetes.io/name: victoria-metrics-k8s-stack
