--- a/kubernetes/apps/security/authentik/app/ingress-outpost.yaml
+++ b/kubernetes/apps/security/authentik/app/ingress-outpost.yaml
@@ -14,3 +14,13 @@ spec:
                 name: ak-outpost-authentik-embedded-outpost
                 port:
                   number: 9000
+    - host: vmagent.${SECRET_DOMAIN}
+      http:
+        paths:
+          - path: /outpost.goauthentik.io
+            pathType: Prefix
+            backend:
+              service:
+                name: ak-outpost-authentik-embedded-outpost
+                port:
+                  number: 9000
