--- a/kubernetes/apps/observability/victoria-metrics/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/alertmanagerconfig.yaml
@@ -33,7 +33,7 @@ stringData:
       - name: "null"
       - name: "pushover"
         pushover_configs:
-          - user_key: ${SECRET_ALERTMANAGER_PUSHOVER_USER_KEY}
+          - user_key: ${PUSHOVER_USER_KEY}
             token: ${SECRET_ALERTMANAGER_PUSHOVER_TOKEN}
             send_resolved: true
             html: true
