--- a/kubernetes/apps/observability/victoria-metrics/app/rules/oom.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/rules/oom.yaml
@@ -3,7 +3,7 @@ apiVersion: operator.victoriametrics.com/v1beta1
 kind: VMRule
 metadata:
   name: oom
-  namespace: victoria-metrics
+  namespace: observability
 spec:
   groups:
   - name: oom-rules
