--- a/kubernetes/apps/observability/victoria-metrics/app/extrascrapes.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/extrascrapes.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: vm-additional-scrape-configs
-  namespace: monitoring
+  namespace: observability
 type: Opaque
 stringData:
   prometheus-additional.yaml: |
