--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -82,7 +82,7 @@ spec:
               path: /var/lib/grafana/dashboards/vm
           - name: "nginx"
             orgId: 1
-            folder: "VicoriaMetrics"
+            folder: "Nginx"
             type: file
             disableDeletion: false
             editable: true
@@ -91,7 +91,7 @@ spec:
               path: /var/lib/grafana/dashboards/nginx
           - name: "storage"
             orgId: 1
-            folder: "VicoriaMetrics"
+            folder: "Storage"
             type: file
             disableDeletion: false
             editable: true
