--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -170,13 +170,13 @@ spec:
       flux:
         # TODO: fix
         flux-cluster:
-          url: https://github.com/fluxcd/flux2-monitoring-example/blob/main/monitoring/configs/dashboards/cluster.json
+          url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/cluster.json
           datasource: VictoriaMetrics
         flux-control-plane:
-          url: https://github.com/fluxcd/flux2-monitoring-example/blob/main/monitoring/configs/dashboards/control-plane.json
+          url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/control-plane.json
           datasource: VictoriaMetrics
         # flux-logs:
-        #   url: https://github.com/fluxcd/flux2-monitoring-example/blob/main/monitoring/configs/dashboards/logs.json
+        #   url: https://raw.githubusercontent.com/fluxcd/flux2-monitoring-example/main/monitoring/configs/dashboards/logs.json
         #   datasource: VictoriaMetrics
       kubernetes:
         kubernetes-api-server:
