--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -27,13 +27,23 @@ spec:
     keepHistory: false
   values:
     fullnameOverride: victoria-metrics
+    argocdReleaseOverride: $ARGOCD_APP_NAME
 
     # VM Operator deployment
     victoria-metrics-operator:
       enabled: true
+      cleanupCRD: true
+      cleanupImage:
+        repository: gcr.io/google_containers/hyperkube
+        tag: v1.18.0
+        pullPolicy: IfNotPresent
+      createCRD: false
       operator:
         disable_prometheus_converter: false # Ensure we keep enabled the converter to sync prom rules to VM rules
         enable_converter_ownership: true # Required to allow VM to remove VM rules it imports if a prometheus rule is deleted
+    serviceAccount:
+      # -- Specifies whether a service account should be created
+      create: true
     # Main VM Cluster in HA mode.
     vmcluster:
       enabled: true
@@ -144,7 +154,11 @@ spec:
         additionalScrapeConfigs:
           name: vm-additional-scrape-configs
           key: prometheus-additional.yaml
-
+        extraArgs:
+          promscrape.streamParse: "true"
+          # Do not store original labels in vmagent's memory by default. This reduces the amount of memory used by vmagent
+          # but makes vmagent debugging UI less informative. See: https://docs.victoriametrics.com/vmagent/#relabel-debug
+          promscrape.dropOriginalLabels: "false"
       ingress:
         enabled: true
         ingressClassName: internal
@@ -198,8 +212,21 @@ spec:
         node: true
         vmagent: true
         vmsingle: true
+        vmcluster: true
         vmhealth: true
         alertmanager: true
+
+      # -- Runbook url prefix for default rules
+      runbookUrl: https://runbooks.skynerv.com
+
+      ## Reduce app namespace alert scope
+      appNamespacesTarget: ".*"
+
+    ## -- Create default dashboards
+    defaultDashboardsEnabled: true
+
+    ## -- Create experimental dashboards
+    experimentalDashboardsEnabled: true
 
     # Prometheus alertmanager spinup
     # Wait, why are we using vmalert AND prometheus alertmanager???
@@ -241,36 +268,102 @@ spec:
                 requests:
                   storage: 50Mi
 
+    # prometheus-node-exporter dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/prometheus-node-exporter/values.yaml
+    prometheus-node-exporter:
+      enabled: true
+      ## all values for prometheus-node-exporter helm chart can be specified here
+      podLabels:
+        ## Add the 'node-exporter' label to be used by serviceMonitor to match standard common usage in rules and grafana dashboards
+        ##
+        jobLabel: node-exporter
+        extraArgs:
+          - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
+          - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
+
+        vmServiceScrape:
+          # wheter we should create a service scrape resource for node-exporter
+          enabled: true
+
+          # spec for VMServiceScrape crd
+          # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
+          spec:
+            jobLabel: jobLabel
+            endpoints:
+              - port: metrics
+                metricRelabelConfigs:
+                  - action: drop
+                    source_labels: [mountpoint]
+                    regex: "/var/lib/kubelet/pods.+"
+
+    # kube-state-metrics dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
+    kube-state-metrics:
+      enabled: true
+
     # Add Kubelet scrape
     kubelet:
       enabled: true
+      # -- Enable scraping /metrics/cadvisor from kubelet's service
+      cadvisor: true
+      # -- Enable scraping /metrics/probes from kubelet's service
+      probes: true
+      # spec for VMNodeScrape crd
+      # https://docs.victoriametrics.com/operator/api.html#vmnodescrapespec
       spec:
+        scheme: "https"
+        honorLabels: true
+        interval: "30s"
+        scrapeTimeout: "5s"
+        tlsConfig:
+          insecureSkipVerify: true
+          caFile: "/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
+        bearerTokenFile: "/var/run/secrets/kubernetes.io/serviceaccount/token"
+        # drop high cardinality label and useless metrics for cadvisor and kubelet
         metricRelabelConfigs:
-          # Drop high cardinality labels
           - action: labeldrop
             regex: (uid)
           - action: labeldrop
             regex: (id|name)
           - action: drop
-            source_labels: ["__name__"]
+            source_labels: [__name__]
             regex: (rest_client_request_duration_seconds_bucket|rest_client_request_duration_seconds_sum|rest_client_request_duration_seconds_count)
+        relabelConfigs:
+          - action: labelmap
+            regex: __meta_kubernetes_node_label_(.+)
+          - sourceLabels: [__metrics_path__]
+            targetLabel: metrics_path
+          - targetLabel: "job"
+            replacement: "kubelet"
+        # ignore timestamps of cadvisor's metrics by default
+        # more info here https://github.com/VictoriaMetrics/VictoriaMetrics/issues/4697#issuecomment-1656540535
+        honorTimestamps: false
 
     # Add Kubeapi scrape
     kubeApiServer:
       enabled: true
+      # spec for VMServiceScrape crd
+      # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
       spec:
-        metricRelabelConfigs:
-          # Drop high cardinality labels
-          - sourceLabels: ["__name__"]
-            regex: (apiserver|etcd|rest_client)_request(|_sli|_slo)_duration_seconds_bucket
-            action: drop
-          - sourceLabels: ["__name__"]
-            regex: (apiserver_response_sizes_bucket|apiserver_watch_events_sizes_bucket)
-            action: drop
+        endpoints:
+          - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+            # bearerTokenSecret:
+            #   key: ""
+            port: https
+            scheme: https
+            tlsConfig:
+              caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+              serverName: kubernetes
+        jobLabel: component
+        namespaceSelector:
+          matchNames:
+            - default
+        selector:
+          matchLabels:
+            component: apiserver
+            provider: kubernetes
 
     # Add kubeControllerManager scrape
     kubeControllerManager:
-      enabled: false
+      enabled: true
       endpoints: &cp
         - 192.168.108.149
       service:
@@ -278,9 +371,37 @@ spec:
         port: 10259
         targetPort: 10259
       spec:
+        jobLabel: jobLabel
+        endpoints:
+          - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+            # bearerTokenSecret:
+            #   key: ""
+            port: http-metrics
+            scheme: https
+            tlsConfig:
+              caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+              serverName: kubernetes
+
+    # -Component scraping kubeDns. Use either this or coreDns
+    kubeDns:
+      enabled: false
+
+    # -- Component scraping coreDns. Use either this or kubeDns
+    coreDns:
+      enabled: true
+      service:
+        enabled: true
+        port: 9153
+        targetPort: 9153
+        selector:
+          k8s-app: kube-dns
+      # spec for VMServiceScrape crd
+      # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
+      spec:
+        jobLabel: jobLabel
         endpoints:
           - port: http-metrics
-            scheme: http
+            bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
 
     # Add kubeScheduler scrape
     kubeScheduler:
@@ -309,20 +430,12 @@ spec:
           - port: http-metrics
             scheme: http
 
-    # Enable deployment of kube state metrics contianers
-    # I chose to deploy these seperately and manage it myself
-    #   insetad of trusting the stack chart
-    kube-state-metrics:
-      enabled: false
-
-    # Enable deployment of prom-note-exporter contianers
-    # I chose to deploy these seperately and manage it myself
-    #   insetad of trusting the stack chart
-    prometheus-node-exporter:
-      enabled: false
-
     # Enable deployment of grafana
     # I chose to deploy this seperately and manage it myself
     #   insetad of trusting the stack chart
     grafana:
       enabled: false
+
+    ## install vm operator crds
+    crds:
+      enabled: true
