--- a/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/kustomization.yaml
@@ -3,8 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./helmrelease.yaml
-  - ./extrascrapes.yaml
+  - ./scrapes/extrascrapes.yaml
   - ./alertmanagerconfig.yaml
-  - ./vmpodscrape.yaml
-  - ./servicescrape.yaml
+  - ./scrapes/vmpodscrape.yaml
+  - ./scrapes/servicescrape.yaml
   - ./rules/oom.yaml
