--- a/kubernetes/apps/observability/victoria-metrics/ks.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/ks.yaml
@@ -2,13 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: victoriametrics-crd
+  name: victoriametrics
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
   targetNamespace: observability
-  path: "./kubernetes/apps/observability/victoria-metrics/crd/"
+  dependsOn:
+    - name: victoriametrics-crd
+  path: "./kubernetes/apps/observability/victoria-metrics/app/"
   prune: true
   wait: false
   sourceRef:
@@ -17,4 +19,3 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 3m
-
