--- a/kubernetes/apps/observability/victoria-metrics/ks.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/ks.yaml
@@ -2,6 +2,24 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: victoriametrics-crd
+  namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
+spec:
+  path: "./kubernetes/apps/observability/victoria-metrics/crd/"
+  prune: true
+  wait: false
+  sourceRef:
+    kind: GitRepository
+    name: home-cluster-kubernetes
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: victoriametrics
   namespace: flux-system
   labels:
@@ -9,6 +27,7 @@ metadata:
 spec:
   targetNamespace: observability
   dependsOn:
+    - name: victoriametrics-crd
     - name: longhorn
   path: "./kubernetes/apps/observability/victoria-metrics/app/"
   prune: true
