--- a/kubernetes/apps/observability/victoria-metrics/crd/ks.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/crd/ks.yaml
@@ -1,13 +1,19 @@
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: victoria-crds
+  name: victoria-operator-crds
   namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
 spec:
-  interval: 1m0s
-  path: ./config/crd/
+  targetNamespace: observability
+  path: "./config/crd/"
   prune: true
+  wait: false
   sourceRef:
     kind: GitRepository
     name: victoria-crd-source
-  targetNamespace: observability
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
