--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -332,71 +332,71 @@ spec:
         # more info here https://github.com/VictoriaMetrics/VictoriaMetrics/issues/4697#issuecomment-1656540535
         honorTimestamps: false
 
-    # Add Kubeapi scrape
-    kubeApiServer:
-      enabled: true
-      # spec for VMServiceScrape crd
-      # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
-      spec:
-        endpoints:
-          - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-            # bearerTokenSecret:
-            #   key: ""
-            port: https
-            scheme: https
-            tlsConfig:
-              caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-              serverName: kubernetes
-        jobLabel: component
-        namespaceSelector:
-          matchNames:
-            - default
-        selector:
-          matchLabels:
-            component: apiserver
-            provider: kubernetes
+    # # Add Kubeapi scrape
+    # kubeApiServer:
+    #   enabled: true
+    #   # spec for VMServiceScrape crd
+    #   # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
+    #   spec:
+    #     endpoints:
+    #       - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+    #         # bearerTokenSecret:
+    #         #   key: ""
+    #         port: https
+    #         scheme: https
+    #         tlsConfig:
+    #           caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+    #           serverName: kubernetes
+    #     jobLabel: component
+    #     namespaceSelector:
+    #       matchNames:
+    #         - default
+    #     selector:
+    #       matchLabels:
+    #         component: apiserver
+    #         provider: kubernetes
 
-    # Add kubeControllerManager scrape
-    kubeControllerManager:
-      enabled: true
-      endpoints: &cp
-        - 192.168.108.149
-      service:
-        enabled: true
-        port: 10259
-        targetPort: 10259
-      spec:
-        jobLabel: jobLabel
-        endpoints:
-          - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-            # bearerTokenSecret:
-            #   key: ""
-            port: http-metrics
-            scheme: https
-            tlsConfig:
-              caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-              serverName: kubernetes
+    # # Add kubeControllerManager scrape
+    # kubeControllerManager:
+    #   enabled: true
+    #   endpoints: &cp
+    #     - 192.168.108.149
+    #   service:
+    #     enabled: true
+    #     port: 10259
+    #     targetPort: 10259
+    #   spec:
+    #     jobLabel: jobLabel
+    #     endpoints:
+    #       - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+    #         # bearerTokenSecret:
+    #         #   key: ""
+    #         port: http-metrics
+    #         scheme: https
+    #         tlsConfig:
+    #           caFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+    #           serverName: kubernetes
 
-    # -Component scraping kubeDns. Use either this or coreDns
-    kubeDns:
-      enabled: false
+    # # -Component scraping kubeDns. Use either this or coreDns
+    # kubeDns:
+    #   enabled: false
 
-    # -- Component scraping coreDns. Use either this or kubeDns
-    coreDns:
-      enabled: true
-      service:
-        enabled: true
-        port: 9153
-        targetPort: 9153
-        selector:
-          k8s-app: kube-dns
-      # spec for VMServiceScrape crd
-      # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
-      spec:
-        jobLabel: jobLabel
-        endpoints:
-          - port: http-metrics
-            bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+    # # -- Component scraping coreDns. Use either this or kubeDns
+    # coreDns:
+    #   enabled: true
+    #   service:
+    #     enabled: true
+    #     port: 9153
+    #     targetPort: 9153
+    #     selector:
+    #       k8s-app: kube-dns
+    #   # spec for VMServiceScrape crd
+    #   # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
+    #   spec:
+    #     jobLabel: jobLabel
+    #     endpoints:
+    #       - port: http-metrics
+    #         bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
 
     # Add kubeScheduler scrape
     kubeScheduler:
