--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -266,33 +266,34 @@ spec:
     # prometheus-node-exporter dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/prometheus-node-exporter/values.yaml
     prometheus-node-exporter:
       enabled: true
+
       ## all values for prometheus-node-exporter helm chart can be specified here
       podLabels:
         ## Add the 'node-exporter' label to be used by serviceMonitor to match standard common usage in rules and grafana dashboards
         ##
         jobLabel: node-exporter
-        extraArgs:
-          - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)
-          - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$
+      extraArgs:
+        - "--collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+|var/lib/kubelet/.+)($|/)"
+        - "--collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup2?|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|iso9660|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tracefs)$"
 
-        vmServiceScrape:
-          # wheter we should create a service scrape resource for node-exporter
-          enabled: true
+      vmServiceScrape:
+        # wheter we should create a service scrape resource for node-exporter
+        enabled: true
 
-          # spec for VMServiceScrape crd
-          # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
-          spec:
-            jobLabel: jobLabel
-            endpoints:
-              - port: metrics
-                metricRelabelConfigs:
-                  - action: drop
-                    source_labels: [mountpoint]
-                    regex: "/var/lib/kubelet/pods.+"
+        # spec for VMServiceScrape crd
+        # https://docs.victoriametrics.com/operator/api.html#vmservicescrapespec
+        spec:
+          jobLabel: jobLabel
+          endpoints:
+            - port: metrics
+              metricRelabelConfigs:
+                - action: drop
+                  source_labels: [mountpoint]
+                  regex: "/var/lib/kubelet/pods.+"
 
-    # # kube-state-metrics dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
-    # kube-state-metrics:
-    #   enabled: true
+    # kube-state-metrics dependency chart configuration. For possible values refer to https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-state-metrics/values.yaml
+    kube-state-metrics:
+      enabled: true
 
     # Add Kubelet scrape
     kubelet:
