--- a/kubernetes/apps/service/smtp-relay/app/resources/maddy.conf
+++ b/kubernetes/apps/service/smtp-relay/app/resources/maddy.conf
@@ -17,8 +17,11 @@ target.queue remote_queue {
 }
 
 target.smtp remote_smtp {
+    tls_client {
+    protocols tls1.2
+    }
     attempt_starttls yes
-    require_tls no
+    require_tls yes
     auth plain {env:SMTP_RELAY_USERNAME} {env:SMTP_RELAY_PASSWORD}
     targets tcp://{env:SMTP_RELAY_SERVER}:{env:SMTP_RELAY_SERVER_PORT}
 }
